<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FiCa</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_user_list">My List</string>
    <string name="genre">Genre</string>
    <string name="print">Print</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="Sort_AToZ"> Sort A>Z</string>
    <string name="Sort_ZToA"> Sort Z>A</string>
    <string name="Release"> Release date(Asc)</string>
    <string name="ReleaseDec">Release date(Dec)</string>
    <string name="RatingPositive">Rating (Asc)</string>
    <string name="RatingNegetive">Rating (Dec)</string>
    <string name="filter_Leeftijd">Adult</string>
    <string name="filter_Leeftijd_blacklist">Child/Teen</string>
    <string name="filter_Genre">Genre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="ExtraTranslation">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Project FiCa</string>
    <string name="nav_header_subtitle" translatable="false">Dylan Mulder\nTim van Wouwe\nMete Kalak\nRobin Beljaars\nCoen Rijsdijk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Genre_Filter_Cancel">Cancel</string>
    <string name="Genre_Filter_Submit">Submit</string>
    <string name="genre_all">All</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="search">Search</string>
    <string name="write_a_review">Write a Review!</string>
    <string name="review_text">Write your review and submit it!</string>
    <string name="submit">Submit</string>
    <string name="ListOverview">ListOverview</string>
    <string name="MovieOverview">MovieOverview</string>
    <string name="share">Share</string>
    <string name="title_activity_list_overview">List Overview</string>
</resources>
