<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/print"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/print"/>
    <item
        android:id="@+id/share"
        android:icon="?attr/actionModeShareDrawable"
        android:orderInCategory="2"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="3"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
    <menu>
        <item
            android:id="@+id/Sort_Option_A_To_Z"
            android:title="@string/Sort_AToZ"></item>
        <item
            android:id="@+id/Sort_Option_Z_To_A"
            android:title="@string/Sort_ZToA"></item>
        <item
            android:id="@+id/Sort_Option_Release_Asc"
            android:title="@string/Release"></item>
        <item
            android:id="@+id/Sort_Option_Release_Dec"
            android:title="@string/ReleaseDec"></item>
        <item
            android:id="@+id/Sort_Option_Rating_Decreasing"
            android:title="@string/RatingPositive"></item>
        <item
            android:id="@+id/Sort_Option_Rating_Increasing"
            android:title="@string/RatingNegetive"></item>
    </menu>
    </item>
    <item
        android:icon="@android:drawable/checkbox_on_background"
        android:orderInCategory="4"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/Filter_Adult"
                android:title="@string/filter_Leeftijd">
            </item>
            <item
                android:id="@+id/Filter_Child"
                android:title="@string/filter_Leeftijd_blacklist">
            </item>
            <item
                android:id="@+id/Filter_Genre"
                android:title="@string/filter_Genre">
                <menu>
                    <item
                    android:id="@+id/Genre_Action"
                    android:title="Action">
                </item>
                    <item
                        android:id="@+id/Genre_Adventure"
                        android:title="Adventure">
                    </item>
                    <item
                        android:id="@+id/Genre_Animation"
                        android:title="Animation">
                    </item>
                    <item
                        android:id="@+id/Genre_Comedy"
                        android:title="Comedy">
                    </item>
                    <item
                        android:id="@+id/Genre_Crime"
                        android:title="Crime">
                    </item>
                    <item
                        android:id="@+id/Genre_Documentary"
                        android:title="Documentary">
                    </item>

                </menu>
            </item>
        </menu>
    </item>
    <group>
        <item android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="Search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"/>
    </group>
</menu>